--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 </div>
 <div id="impress">
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q><p>想你至深，念你至醇……吾爱，你可知道？</p><p><b> 对于我 </b>你的笑最重要！</p></q>
+        <q><p>想你至深，念你至醇……</p><p><b> 对于我 </b>你的笑最重要！</p></q>
     </div>
 
     <div class="step slide" data-x="0" data-y="-1500">
-        <q>只要你愿意，当你失落失意的时候，最需要一个肩膊的时候，告诉我，我会立即出现。</q>
+        <q>只要你愿意，当你失落失意的时候，最需要一个肩膀的时候，告诉我，我会立即出现。</q>
     </div>
 
     <div class="step slide" data-x="1000" data-y="-1500">
-        <q><p>牵你的手，朝朝暮暮。</p><p>牵你的手，等待明天。，<b> 牵你的手，走过今生。</b>牵你的手，生生世世。</p></q>
+        <q><p>牵你的手，朝朝暮暮。</p><p> 牵你的手，走过今生。</b>牵你的手，生生世世。</p></q>
     </div>
 
     <div id="title" class="step" data-x="0" data-y="0" data-scale="4">
